Release 1.2.6 - add /necrifyhelp command listing all commands and their usage - use correct namings of template and stage tables